<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_post"
            android:title="@string/menu_posts" />
       
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
