<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.charitycare.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_post"
        android:name="com.example.charitycare.ui.PostFragment"
        android:label="@string/menu_posts"
        tools:layout="@layout/fragment_posts" >
    </fragment>


    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.charitycare.ui.HelpFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_help" >
    </fragment>
</navigation>