<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DisableSetupActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="5dp"
        android:background="@drawable/button"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/persinal_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Personal Information"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Names"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:id="@+id/edit_fullnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your full Names"
                android:background="@drawable/input_field"
                android:padding="15dp"
                android:layout_margin="10dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:id="@+id/edit_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="+254"
                android:inputType="phone"
                android:background="@drawable/input_field"
                android:padding="15dp"
                android:layout_margin="10dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name of the next of kin"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:id="@+id/edit_nextofKin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="please enter the name"
                android:inputType="textPersonName"
                android:background="@drawable/input_field"
                android:padding="15dp"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Relationship with next of kin"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:id="@+id/edit_relationshipNextKin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="father, mother,sibling...."
                android:inputType="textPersonName"
                android:background="@drawable/input_field"
                android:padding="15dp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/demographicInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demographic Information"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="italic"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"

                android:text="Sex"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp" />
            <RadioGroup
                android:id="@+id/group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="GenderButtonClicked"
                    android:text="@string/radiomale"/>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="GenderButtonClicked"
                    android:text="@string/radiofemale"/>

                <RadioButton
                    android:id="@+id/radio_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="GenderButtonClicked"
                    android:text="@string/radioother"/>

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marital Status"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />

            <RadioGroup
                android:id="@+id/group_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp">

                <RadioButton
                    android:id="@+id/radio_single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="MaritalStatusButtonClicked"
                    android:text="@string/radiosingle"/>


                <RadioButton
                    android:id="@+id/radio_married"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="MaritalStatusButtonClicked"
                    android:text="@string/radiomarried"/>

            </RadioGroup>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="5dp"
        android:background="@drawable/button"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/disabilityInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disability Information"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="italic"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cause of disability"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>



            <RadioGroup
                android:id="@+id/major_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_accident"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="MajorCourseButtonClicked"
                    android:text="@string/radioaccident" />

                <RadioButton
                    android:id="@+id/radio_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="MajorCourseButtonClicked"
                    android:text="@string/radioabirth"/>

                <RadioButton
                    android:id="@+id/radio_illness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="MajorCourseButtonClicked"
                    android:text="@string/radioillness"/>

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type of help needed"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <RadioGroup
                android:id="@+id/radio_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radio_medical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="kindofHelpButtonClicked"
                    android:text="@string/radiomedical"/>

                <RadioButton
                    android:id="@+id/radio_training"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="kindofHelpButtonClicked"
                    android:text="@string/radiotraining"/>

                <RadioButton
                    android:id="@+id/radio_specify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="kindofHelpButtonClicked"
                    android:text="@string/radiospecify"/>

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount needed"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ksh."
                android:background="@drawable/input_field"
                android:padding="15dp"
                android:layout_margin="10dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/supporting_document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Supporting Documents"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/medical_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="18dp"
                android:padding="8dp"
                android:textAllCaps="false"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="upload image of medical report"
                />

            <TextView
                android:id="@+id/Selected_Medical_Record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:visibility="gone"
                android:padding="5dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                />


            <Button
                android:id="@+id/certificate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="18dp"
                android:padding="8dp"
                android:textAllCaps="false"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="upload image of Birth certificate"
                />
            <TextView
                android:id="@+id/Selected_Birth_Record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:visibility="gone"
                android:padding="5dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                />



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        android:textColor="@android:color/white"
        android:src="@drawable/ic_save"
        />

</LinearLayout>

</ScrollView>